<resources>
    <string name="app_name">ColonelFund</string>
    <string name="edit_message">Enter a Message</string>
    <string name="button_send">Send</string>
    <string name="button_member_list">Member List</string>
    <string name="button_event_list">Event List</string>
    <string name="button_create_event">Create Event</string>
    <string name="fund_goal">Fund Goal:</string>
    <string name="current_funds">Current Funds:</string>
    <string name="associated_member">Associated Member:</string>
    <string name="event_date">Event Date:</string>
</resources>
